# annotation-refinement

./: README.md  pipeline_example.py  pyproject.toml  test_filters.py
scripts/: README.md  evaluate_aspect_ratio_thresholds.py  evaluate_bbox_size_thresholds.py  evaluate_confidence_thresholds.py  evaluate_duplicate_overlap_thresholds.py  evaluate_osm_water_filter.py  visualize_filter_results.py
src/annotation_refinement/: __init__.py  config.py  filters.py  geojson_io.py  osm_water.py  pipeline.py  raster_metadata.py
tests/: test_bbox_aspect_ratio_filter.py  test_bbox_size_filter.py  test_confidence_filter.py  test_duplicate_overlap_filter.py  test_filter_helpers.py  test_osm_water_filter.py
