[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "annotation-refinement"
version = "0.1.0"
description = "Small postprocessing utilities for refining object detection annotations."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
